--- a/package.json
+++ b/package.json
@@ -8,7 +8,13 @@
     "posttest": "npm run eslint && npm run stylelint",
     "eslint": "eslint .",
     "stylelint": "stylelint **/*.*css",
-    "style": "sass base.scss style.min.css --style compressed"
+    "style": "sass base.scss output/style.min.css --style compressed",
+    "inline-style": "sass inline.scss output/inline.min.css --style compressed",
+    "build": "node compiler.js",
+    "publish": "rsync -av output/* efo@emilfolino.se:/var/www/jsramverk.me/html/",
+    "production": "npm run clean-output && npm run inline-style && npm run style && npm run build && npm run cp-base && npm run publish",
+    "cp-base": "cp index.html inter-ui* output/",
+    "clean-output": "rm -rf output/*"
   },
   "repository": {
     "type": "git",
