Added local script to npm scripts

--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "inline-style": "sass inline.scss output/inline.min.css --style compressed",
     "build": "node compiler.js",
     "publish": "rsync -av output/* efo@emilfolino.se:/var/www/jsramverk.me/html/",
-    "production": "npm run clean-output && npm run inline-style && npm run style && npm run build && npm run cp-base && npm run publish",
     "cp-base": "cp index.html inter-ui* output/",
-    "clean-output": "rm -rf output/*"
+    "clean-output": "rm -rf output/*",
+    "local": "npm run clean-output && npm run inline-style && npm run style && npm run build && npm run cp-base",
+    "production": "npm run local && npm run publish"
   },
   "repository": {
     "type": "git",
