--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Possible new home for course jsramverk.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 0",
+    "test": "",
     "posttest": "npm run eslint && npm run stylelint",
     "eslint": "eslint .",
     "stylelint": "stylelint **/*.*css",
