added all weeks assignments and renamed pages

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "cp-font": "cp inter-ui/* output/",
     "clean-output": "rm -rf output/*",
     "build-client-js": "uglifyjs client-js/scroll.js -o output/scroll.min.js --compress --mangle",
-    "local": "npm run clean-output && npm run inline-style && npm run style && npm run build-client-js && npm run build && npm run cp-font",
+    "local": "npm test && npm run clean-output && npm run inline-style && npm run style && npm run build-client-js && npm run build && npm run cp-font",
     "production": "npm run local && npm run publish"
   },
   "repository": {
