--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "uglify-js": "^3.4.10"
   },
   "dependencies": {
-    "markdown": "^0.5.0",
+    "markdown-it": "^8.4.2",
     "normalize.css": "^8.0.1",
     "slugify": "^1.3.4"
   }
