fixed menu for week pages

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "style": "sass base.scss output/style.min.css --style compressed",
     "inline-style": "sass inline.scss output/inline.min.css --style compressed",
     "build": "node app.js",
-    "publish": "rsync -av --delete --ignore-existing output/* efo@emilfolino.se:/var/www/jsramverk.me/html/",
+    "publish": "rsync -av output/* efo@jsramverk.me:/var/www/jsramverk.me/html/",
     "cp-font": "cp inter-ui/* output/",
     "clean-output": "rm -rf output/*",
     "build-client-js": "uglifyjs client-js/scroll.js -o output/scroll.min.js --compress --mangle",
