--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "cp-highlight": "cp highlight.js/highlight.pack.js highlight.js/styles/atom-one-dark.css output/",
     "clean-output": "rm -rf output/*",
     "build-client-js": "uglifyjs client-js/scroll.js -o output/scroll.min.js --compress --mangle",
+    "sitemap": "node sitemap.js",
     "local": "npm test && npm run clean-output && npm run inline-style && npm run style && npm run build-client-js && npm run build && npm run cp-font && npm run cp-highlight",
-    "production": "npm run local && npm run publish"
+    "production": "npm run local && npm run publish",
+    "postproduction": "npm run sitemap"
   },
   "repository": {
     "type": "git",
@@ -41,6 +43,7 @@
   "dependencies": {
     "markdown-it": "^8.4.2",
     "normalize.css": "^8.0.1",
+    "sitemap-generator": "^8.3.3",
     "slugify": "^1.3.4"
   }
 }
