--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
     "stylelint": "stylelint **/*.*css",
     "style": "sass base.scss output/style.min.css --style compressed",
     "inline-style": "sass inline.scss output/inline.min.css --style compressed",
+    "build-style": "npm run inline-style && npm run style",
     "build": "node app.js",
     "publish": "rsync -av output/* efo@jsramverk.me:/var/www/jsramverk.me/html/",
     "cp-font": "cp inter-ui/* output/",
     "clean-output": "rm -rf output/*",
     "build-client-js": "webpack -p && cp dist/bundle.js output/",
     "sitemap": "node sitemap.js",
-    "local": "npm test && npm run clean-output && npm run inline-style && npm run style && npm run build-client-js && npm run build && npm run build-client-js && npm run cp-font",
+    "local": "npm test && npm run fast-local",
+    "fast-local": "npm run clean-output && npm run build-style && npm run build && npm run build-client-js && npm run cp-font",
     "production": "npm run local && npm run publish",
     "postproduction": "npm run sitemap"
   },
