--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "markdown-it": "^8.4.2",
     "normalize.css": "^8.0.1",
     "sitemap-generator": "^8.3.3",
-    "slugify": "^1.3.4"
+    "slugify": "^1.3.4",
+    "turbolinks": "^5.2.0"
   }
 }
