--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -30,7 +30,12 @@
         "no-empty-source": true,
         "no-extra-semicolons": true,
         "no-invalid-double-slash-comments": true,
-        "property-no-unknown": true,
+        "property-no-unknown": [
+            true,
+            {
+                "ignoreProperties": ["font-named-instance"]
+            }
+        ],
         "selector-pseudo-class-no-unknown": true,
         "selector-pseudo-element-no-unknown": true,
         "selector-type-no-unknown": true,
