--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "build-style": "npm run inline-style && npm run style",
     "build": "node app.js",
     "publish": "rsync -av output/* efo@jsramverk.me:/var/www/jsramverk.me/html/",
-    "cp-font": "cp inter-ui/* output/",
+    "cp-font": "cp inter-ui/*.woff* output/",
     "clean-output": "rm -rf output/*",
     "build-client-js": "webpack -p && cp dist/bundle.js output/",
     "sitemap": "node sitemap.js",
@@ -25,7 +25,7 @@
     "production": "npm run local && npm run publish",
     "postproduction": "npm run sitemap",
     "watch": "npm-watch",
-    "icons": "cp icons/*.png icons/*.svg output/"
+    "icons": "cp icons/*.png icons/*.svg site.webmanifest output/"
   },
   "repository": {
     "type": "git",
