--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "css-loader": "^2.1.1",
     "eslint": "^5.14.1",
     "eslint-plugin-react": "^7.12.4",
+    "html-minifier": "^4.0.0",
     "javascript-style-guide": "^0.9.10",
     "npm-watch": "^0.6.0",
     "sass": "^1.17.0",
