--- a/package.json
+++ b/package.json
@@ -13,15 +13,15 @@
     "stylelint": "stylelint **/*.*css",
     "style": "sass base.scss output/style.min.css --style compressed",
     "inline-style": "sass inline.scss output/inline.min.css --style compressed",
-    "build-style": "npm run inline-style && npm run style",
+    "build-style": "npm run cp-highlightstyle && npm run inline-style && npm run style",
+    "cp-highlightstyle": "cp node_modules/highlight.js/styles/monokai-sublime.css sass/monokai-sublime.scss",
     "build": "node app.js",
     "publish": "rsync -av output/* efo@emilfolino.se:/var/www/jsramverk.me/html",
-    "cp-font": "cp inter-ui/*.woff* output/",
     "clean-output": "rm -rf output/*",
     "build-client-js": "webpack -p && cp dist/bundle.js output/",
     "sitemap": "node sitemap.js",
     "local": "npm test && npm run fast-local",
-    "fast-local": "npm run clean-output && npm run build-style && npm run build && npm run build-client-js && npm run cp-font && npm run icons && npm run slides && npm run examples",
+    "fast-local": "npm run clean-output && npm run build-style && npm run build && npm run build-client-js && npm run icons && npm run slides && npm run examples",
     "production": "npm run local && npm run publish",
     "postproduction": "npm run sitemap",
     "watch": "npm-watch",
@@ -49,14 +49,15 @@
     "npm-watch": "^0.6.0",
     "sass": "^1.26.3",
     "style-loader": "^0.23.1",
-    "stylelint": "^9.10.1",
+    "stylelint": "^13.3.3",
     "uglify-js": "^3.4.10",
     "webpack": "^4.29.6",
-    "webpack-cli": "^3.3.0"
+    "webpack-cli": "^3.3.11"
   },
   "dependencies": {
     "eslint-config-standard": "^14.1.0",
     "highlight.js": "^9.15.6",
+    "html-entities": "^1.3.1",
     "markdown-it": "^8.4.2",
     "normalize.css": "^8.0.1",
     "sitemap-generator": "^8.4.2",
