fixed beta script

--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "cp-highlightstyle": "cp node_modules/highlight.js/styles/monokai-sublime.css sass/monokai-sublime.scss",
     "build": "node app.js",
     "publish": "rsync -av output/* efo@emilfolino.se:/var/www/jsramverk.me/html",
+    "beta-publish": "rsync -av output/* efo@emilfolino.se:/var/www/beta.jsramverk.se/html",
     "clean-output": "rm -rf output/*",
     "build-client-js": "webpack -p && cp dist/bundle.js output/",
     "sitemap": "node sitemap.js",
     "local": "npm test && npm run fast-local",
     "fast-local": "npm run clean-output && npm run build-style && npm run build && npm run build-client-js && npm run icons && npm run slides && npm run examples",
+    "beta": "npm run local && rm -rf output/slides output/examples && npm run beta-publish",
     "production": "npm run local && npm run publish",
     "postproduction": "npm run sitemap",
     "watch": "npm-watch",
