Inlined all css to get 100

--- a/package.json
+++ b/package.json
@@ -11,9 +11,8 @@
     "stop-posttest": "npm run eslint && npm run stylelint",
     "eslint": "eslint .",
     "stylelint": "stylelint **/*.*css",
-    "style": "sass base.scss output/style.min.css --style compressed",
-    "inline-style": "sass inline.scss output/inline.min.css --style compressed",
-    "build-style": "npm run cp-highlightstyle && npm run inline-style && npm run style",
+    "style": "sass --no-source-map base.scss output/style.min.css --style compressed",
+    "build-style": "npm run cp-highlightstyle && npm run style",
     "cp-highlightstyle": "cp node_modules/highlight.js/styles/monokai-sublime.css sass/monokai-sublime.scss",
     "build": "node app.js",
     "publish": "rsync -av output/* efo@emilfolino.se:/var/www/jsramverk.me/html",
