--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "build-client-js": "webpack -p && cp dist/bundle.js output/",
     "sitemap": "node sitemap.js",
     "local": "npm test && npm run fast-local",
-    "fast-local": "npm run clean-output && npm run build-style && npm run build && npm run build-client-js && npm run icons && npm run slides && npm run examples",
+    "fast-local": "npm run clean-output && npm run build-style && npm run build && npm run icons && npm run slides && npm run examples",
     "beta": "npm run local && rm -rf output/slides output/examples && npm run beta-publish",
     "production": "npm run local && npm run publish",
     "postproduction": "npm run sitemap",
